--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,61 @@
 body {
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
   background-color: #626262;
   font-family: 'Press Start 2P', cursive;
 }
 
+
 .container {
   height: 500px;
   width: 700px;
-  margin: 100px auto;
+  margin: 0px auto;
   background-image: url('../../assets/images/pokedex.jpg');
   background-size: cover;
   background-position: center;
+  border: 100px solid black;
+  border-bottom-right-radius: 10%;
+  border-bottom-left-radius: 2.5%;
+  border-top-right-radius: 2.5%;
+  border-top-left-radius: 2.5%;
+  box-shadow: 0px 0px 0px 50px purple, 0px 80px 0px 50px purple, 0px 120px 0px 50px purple;
 }
+
+h2{
+  color: #626262;
+  position: relative;
+  font-size: 45px;
+  top: 490px;
+  left: 50px;
+}
+.powerLed{
+  position: relative;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: red;
+  left: -60px;
+}
+.color{
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  color: #626262;
+  position: relative;
+  display: flex;
+  font-size: 55px;
+  font-weight: bolder;
+  top: 312px;
+  left: 450px;
+}
+.C{color: red;}
+.O1{color: purple;}
+.L{color: green;}
+.O2{color: yellow;}
+.R{color: lightblue;}
 
 .imgOne {
   position: relative;
-  top: 55px;
+  top: -270px;
   left: 55px;
   height: 200px;
   width: auto;
@@ -23,7 +64,7 @@ body {
 .idName {
   position: relative;
   font-size: 16px;
-  top: -177px;
+  top: -505px;
   left: 360px;
 
 }
@@ -36,46 +77,46 @@ body {
 .moveSet1 {
   position: relative;
   margin-right: 30px;
-  top: 20px;
+  top: -300px;
   left: 100px;
 }
 
 form {
   display: flex;
   position: relative;
-  top: 7px;
+  top: -320px;
   left: 450px;
 }
 
 .seven {
   position: relative;
   width: 500px;
-  top: -100px;
+  top: -420px;
   left: 100px;
   font-size: 10px;
 }
 
 .six {
   position: relative;
-  top: 0px;
+  top: -318px;
   left: 200px;
   font-size: 10px;
 }
 
 .imgFive {
   position: relative;
-  top: -225px;
+  top: -555px;
   left: 300px;
 }
 
 .eight {
   position: relative;
-  top: -310px;
+  top: -640px;
   left: 500px;
 }
 
 .nine {
   position: relative;
-  top: -302px;
+  top: -630px;
   left: 500px;
 }
