--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,12 @@ h2{
   width: 20px;
   border-radius: 50%;
   background-color: red;
-  left: -60px;
+  left: -60px
+  
 }
+
+
+
 .color{
   font-family: "Comic Sans MS", cursive, sans-serif;
   color: #626262;
@@ -91,7 +95,7 @@ form {
 .seven {
   position: relative;
   width: 500px;
-  top: -420px;
+  top: -320px;
   left: 100px;
   font-size: 10px;
 }
@@ -105,18 +109,18 @@ form {
 
 .imgFive {
   position: relative;
-  top: -555px;
-  left: 300px;
+  top: -280px;
+  left: 80px;
 }
 
 .eight {
   position: relative;
-  top: -640px;
+  top: -490px;
   left: 500px;
 }
 
 .nine {
   position: relative;
-  top: -630px;
+  top: -560px;
   left: 500px;
 }
